test/files/neg/t4425.check
t4425.scala:2: error: Implementation restriction: unapply member cannot have default arguments
  object X { def unapply(x : Int)(y : Option[Int] = None) = None }
                 ^
t4425.scala:3: error: wrong number of arguments for object X
  42 match { case _ X _ => () }
                    ^
two errors found
